# br_army_knife

./: README.md  build.sh  build_and_install_local.sh  build_and_upload.sh  pyproject.toml  utils.sh
src/: lists.py
src/br_army_knife/: __init__.py  code.py  configs.py  files.py  lists.py  logs.py  parallel.py
tests/: exploratory.ipynb
